--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-startupjerez.com
+<style>
+body {
+  text-align: center;
+  background: #f3f2e9;
+  font-family: sans-serif;
+  font-size: 14px;
+  padding: 3vw;
+  letter-spacing: 0.8px;
+}
+
+.btn {
+  max-width: 400px;
+  background: #155AB9;
+  margin: 0 auto;
+  padding: 14px 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  font-size: 26px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  padding: 18px 36px;
+  margin-top: -4px;
+}
+</style>
+
+<body>
+
+  <p style="margin-bottom: 30px;"><img src="./startup-jerez-logo.png" style="max-width: 380px; width: 100%;" /></p>
+
+  <h1>Bienvenido a la comunidad de StartupJerez</h1>
+
+  <h2>StartupJerez es una comunidad discord de emprendedores y startups de Jerez de la Frontera.<h2>
+
+  <p style="margin-bottom: 30px; font-weight: normal;">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, montar un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!</p>
+
+  <p><a href="/discord" class="btn">Aceptar invitación</a></p>
+
+<body>
