--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 
   <h2>StartupJerez es una comunidad discord de emprendedores y startups de Jerez de la Frontera.<h2>
 
-  <p style="margin-bottom: 30px; font-weight: normal;">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, montar un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!</p>
+  <p style="margin-bottom: 30px; font-weight: normal;">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!</p>
 
   <p><a href="/discord" class="btn">Aceptar invitación</a></p>
 
