--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<style>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <title>StartupJerez - comunidad de emprendedores y startups de Jerez de la Frontera</title>
+    <meta name="description" content="Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!" />
+
+    <style>
 body {
   text-align: center;
   background: #f3f2e9;
@@ -6,6 +12,32 @@ body {
   font-size: 14px;
   padding: 3vw;
   letter-spacing: 0.8px;
+  max-width: 75vw;
+  margin: 0 auto;
+}
+
+#logo-container {
+  margin-bottom: 30px;
+}
+
+#logo {
+  max-width: 380px;
+  width: 100%;
+}
+
+h1 {
+  font-size: 1.8rem;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 1.6rem;
+}
+
+#description {
+  margin-bottom: 30px;
+  font-weight: normal;
+  font-size: 1.2rem;
 }
 
 .btn {
@@ -26,18 +58,17 @@ body {
   padding: 18px 36px;
   margin-top: -4px;
 }
-</style>
+    </style>
+  </head>
+  <body>
+    <p id="logo-container"><img src="./startup-jerez-logo.png" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
 
-<body>
+    <h1>¡Bienvenido a la comunidad de StartupJerez!</h1>
 
-  <p style="margin-bottom: 30px;"><img src="./startup-jerez-logo.png" style="max-width: 380px; width: 100%;" /></p>
+    <h2>StartupJerez es una comunidad de emprendedores y startups de Jerez de la Frontera.</h2>
 
-  <h1>Bienvenido a la comunidad de StartupJerez</h1>
+    <p id="description">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores.</p>
 
-  <h2>StartupJerez es una comunidad discord de emprendedores y startups de Jerez de la Frontera.<h2>
-
-  <p style="margin-bottom: 30px; font-weight: normal;">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!</p>
-
-  <p><a href="/discord" class="btn">Aceptar invitación</a></p>
-
-<body>
+    <p><a href="/discord" class="btn">Aceptar invitación</a></p>
+    <body>
+</html>
