include pagespeed suggestions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StartupJerez - comunidad de emprendedores y startups de Jerez de la Frontera</title>
     <meta name="description" content="Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores!" />
 
@@ -61,7 +62,7 @@ h2 {
     </style>
   </head>
   <body>
-    <p id="logo-container"><img src="./startup-jerez-logo.png" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
+    <p id="logo-container"><img src="./startup-jerez-logo.webp" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
 
     <h1>¡Bienvenido a la comunidad de StartupJerez!</h1>
 
