--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
 #logo {
   max-width: 380px;
   width: 100%;
+  height: auto;
 }
 
 h1 {
@@ -62,7 +63,7 @@ h2 {
     </style>
   </head>
   <body>
-    <p id="logo-container"><img src="./startup-jerez-logo.webp" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
+    <p id="logo-container"><img src="./startup-jerez-logo.webp" width="380" height="340" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
 
     <h1>¡Bienvenido a la comunidad de StartupJerez!</h1>
 
