--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ h2 {
     </style>
   </head>
   <body>
-    <p id="logo-container"><img src="./startup-jerez-logo-small.webp" width="380" height="340" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
+    <p id="logo-container"><img src="./startup-jerez-logo.webp" width="380" height="340" id="logo" alt="StartupJerez logo comunidad de emprendedores y startups de Jerez de la Frontera" /></p>
 
     <h1>¡Bienvenido a la comunidad de StartupJerez!</h1>
 
