--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="es">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -72,5 +73,5 @@ h2 {
     <p id="description">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores.</p>
 
     <p><a href="/discord" class="btn">Aceptar invitación</a></p>
-    <body>
+  </body>
 </html>
