fix mobile menu over contact

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-gradient-to-b from-white to-primary-300 h-full">
   <main class="container mx-auto">
-    <header class="sticky top-0">
+    <header class="sticky top-0 z-10">
       <nav class="border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800 backdrop-blur-md">
           <div class="flex flex-wrap justify-between items-center mx-auto">
               <a href="/" class="flex items-center">
@@ -195,7 +195,7 @@
         </div>
             <div>
                 <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300" data-en="Your name">Tu nombre</label>
-                <input type="text" id="name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic" placeholder="Write your full name" data-en="Escribe tu nombre completo" required>
+                <input type="text" id="name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic" placeholder="Escribe tu nombre completo" data-en="Write your full name" required>
             </div>
             <div>
                 <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300" data-en="Your email">Tu email</label>
