--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
             <p class="mb-4" data-en="StartupJerez is a community of entrepreneurs and startups from Jerez de la Frontera.">StartupJerez es una comunidad de emprendedores y startups de Jerez de la Frontera.</p>
             <p data-en="Join if you are a student, entrepreneur, want to learn about startups, meet your future partners, create a business, meet professionals in the sector, or simply connect with other entrepreneurs.">Únete si eres estudiante, emprendedor, quieres aprender de startups, conocer a tus futuros socios, crear un negocio, conocer profesionales del sector, o simplemente conectar con otros emprendedores.</p>
         </div>
-        <img class="w-full rounded-lg shadow-lg" src="./images/jerez-de-la-frontera.webp" alt="Jerez de la Frontera">
+        <img class="w-full rounded-lg shadow-lg mt-4 lg:mt-0" src="./images/jerez-de-la-frontera.webp" alt="Jerez de la Frontera">
     </div>
 </section>
   <section id="coworking">
-    <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
-      <div class="grid grid-cols-2 gap-4 mt-8">
+    <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 grid-cols-1 lg:py-16 lg:px-6 flex flex-col">
+      <div class="grid grid-cols-2 gap-4 mt-8 mb-8 md:mb-0 order-2 l:order-1">
         <img class="w-full rounded-lg shadow-lg" src="./images/coworking-1.jpg" alt="Coworking Jerez">
         <img class="mt-4 w-full lg:mt-10 rounded-lg shadow-lg" src="./images/coworking-2.jpg" alt="Coworking Jerez">
         <img class="mt-4 w-full lg:mt-10 rounded-lg shadow-lg" src="./images/coworking-3.jpg" alt="Coworking Jerez">
         <img class="mt-4 w-full lg:mt-10 rounded-lg shadow-lg" src="./images/coworking-4.jpg" alt="Coworking Jerez">
     </div>
-        <div class="font-light text-gray-800 sm:text-lg dark:text-gray-400">
+        <div class="font-light text-gray-800 sm:text-lg dark:text-gray-400 order-1 lg:order-2">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white" data-en="Coworking Jerez">Coworking Jerez</h2>
             <p class="mb-4" data-en="A place focused on improving the productivity of companies in the creative sector through training processes, intensive promotion of their digital transformation and specialized technical equipment.">
               Un lugar enfocado a mejorar la  productividad de las empresas del sector creativo a través de procesos de formación, el fomento intensivo de su transformación digital y un equipamiento técnico especializado.
@@ -132,9 +132,9 @@
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white" data-en="Our Team">Nuestro equipo</h2>
           <p class="font-light text-gray-800 lg:mb-16 sm:text-xl dark:text-gray-400" data-en="over 30 years of combined experience in building digital products and startups, delivering innovative, high-quality solutions that push the boundaries of technology and design.">Más de 30 años de experiencia combinada en la creación de productos digitales y nuevas empresas, brindando soluciones innovadoras y de alta calidad que superan los límites de la tecnología y el diseño.</p>
       </div> 
-      <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2 items-center">
-          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 text-center md:text-left">
-                  <img class="h-48 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 md:m-0" src="./images/denis-ciccale.png" alt="Denis Ciccale Avatar">
+      <div class="grid gap-8 mb-6 lg:mb-16 lg:grid-cols-2 items-center">
+          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 text-center sm:text-left">
+                  <img class="h-48 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0" src="./images/denis-ciccale.png" alt="Denis Ciccale Avatar">
               <div>
                 <div class="p-5 md:py-0">
                   <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -142,7 +142,7 @@
                   </h3>
                   <span class="text-gray-800 dark:text-gray-400">CEO & Co-Founder</span>
                   <p class="mt-3 mb-4 font-light text-gray-800 dark:text-gray-400 italic">Write short description here</p>
-                  <ul class="flex justify-center md:justify-start space-x-4 sm:mt-0">
+                  <ul class="flex justify-center sm:justify-start space-x-4 sm:mt-0">
                       <li>
                           <a href="http://x.com/dciccale" target="_blank" class="text-gray-800 hover:text-gray-900 dark:hover:text-white">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_1232_65633)"><path d="M12.6411 0.666656H15.0936L9.70876 6.79795L16 15.1152H11.063L7.1976 10.0609L2.77241 15.1152H0.319893L6.02466 8.55736L0 0.666656H5.05965L8.55182 5.28378L12.6411 0.666656ZM11.7827 13.6757H13.1423L4.34522 2.05286H2.88437L11.7827 13.6757Z" fill="currentColor"></path></g><defs><clipPath id="clip0_1232_65633"><rect width="16" height="16" fill="white"></rect></clipPath></defs></svg>
@@ -157,8 +157,8 @@
                 </div>
               </div>
           </div> 
-          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 text-center md:text-left">
-                  <img class="h-48 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 md:m-0" src="./images/eugenio-ciccale.png" alt="Eugenio Ciccale Avatar">
+          <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700 text-center sm:text-left">
+                  <img class="h-48 rounded-lg sm:rounded-none sm:rounded-l-lg mx-auto mt-5 sm:m-0" src="./images/eugenio-ciccale.png" alt="Eugenio Ciccale Avatar">
                   <div>
               <div class="p-5 md:py-0">
                   <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
@@ -166,7 +166,7 @@
                   </h3>
                   <span class="text-gray-800 dark:text-gray-400">CPDO - Chief Product & Design Officer</span>
                   <p class="mt-3 mb-4 font-light text-gray-800 dark:text-gray-400 italic">Write short description here</p>
-                  <ul class="flex justify-center md:justify-start space-x-4 sm:mt-0">
+                  <ul class="flex justify-center sm:justify-start space-x-4 sm:mt-0">
                     <li>
                       <a href="http://x.com/keno_reloaded" target="_blank" class="text-gray-800 hover:text-gray-900 dark:hover:text-white">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_1232_65633)"><path d="M12.6411 0.666656H15.0936L9.70876 6.79795L16 15.1152H11.063L7.1976 10.0609L2.77241 15.1152H0.319893L6.02466 8.55736L0 0.666656H5.05965L8.55182 5.28378L12.6411 0.666656ZM11.7827 13.6757H13.1423L4.34522 2.05286H2.88437L11.7827 13.6757Z" fill="currentColor"></path></g><defs><clipPath id="clip0_1232_65633"><rect width="16" height="16" fill="white"></rect></clipPath></defs></svg>
