--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
     <link rel="stylesheet" href="css/global.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TWCZ0SSM8W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TWCZ0SSM8W');
+</script>
+
 </head>
 <body class="bg-gradient-to-b from-white to-primary-300 h-full">
   <main class="container mx-auto">
