--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                   <a
                     href="#team"
                     class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"
-                    data-en="Team"
-                    >Equipo</a
+                    data-en="Ambassadors"
+                    >Embajadores</a
                   >
                 </li>
                 <li>
@@ -166,7 +166,7 @@
             data-en="At StartupJerez, our mission is to foster the entrepreneurial and tech ecosystem in Jerez de la Frontera. We aim to support the creation of innovative products and services, helping to retain and attract talent to our city. ">
             En StartupJerez buscamos promover el ecosistema
             emprendedor-tecnológico y apoyar la creación de productos o
-            servicios innovadores en Jerez de la Frontera, con el objetivo de
+            servicios innovadores en Jerez de la Frontera con el objetivo de
             mantener y atraer el talento en esta ciudad.
           </p>
           <div
@@ -217,21 +217,22 @@
           <div class="font-light text-gray-800 sm:text-lg dark:text-gray-400">
             <h2
               class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
-              data-en="About StartupJerez">
-              Acerca de StartupJerez
+              data-en="StartupJerez is for everyone">
+              StartupJerez es para tod@s
             </h2>
-            <p
-              class="mb-4"
-              data-en="StartupJerez is a community of entrepreneurs and startups from Jerez de la Frontera.">
-              StartupJerez es una comunidad de emprendedores y startups de Jerez
-              de la Frontera.
-            </p>
             <p
               data-en="Join if you are a student, entrepreneur, want to learn about startups, meet your future partners, create a business, meet professionals in the sector, or simply connect with other entrepreneurs.">
               Únete si eres estudiante, emprendedor, quieres aprender de
               startups, conocer a tus futuros socios, crear un negocio, conocer
               profesionales del sector, o simplemente conectar con otros
               emprendedores.
+            </p>
+            <p
+              class="mt-4"
+              data-en="Join if you are a student, entrepreneur, want to learn about startups, meet your future partners, create a business, meet professionals in the sector, or simply connect with other entrepreneurs.">
+              Cualquier persona puede ser parte de esta comunidad de
+              profesionales y futuros profesionales, pide consejos o comparte
+              tus experiencias.
             </p>
           </div>
           <img
@@ -276,24 +277,21 @@
             <p
               class="mb-4"
               data-en="A place focused on improving the productivity of companies in the creative sector through training processes, intensive promotion of their digital transformation and specialized technical equipment.">
-              Un lugar enfocado a mejorar la productividad de las empresas del
-              sector creativo a través de procesos de formación, el fomento
-              intensivo de su transformación digital y un equipamiento técnico
-              especializado.
+              Conoce el espacio ideal para trabajar y conectar con una comunidad
+              innovadora y creativa.
             </p>
             <p
               class="mb-4"
               data-en="An innovative, open and multidisciplinary space to host cultural activities, business meetings, training workshops, product presentations, exhibitions or conferences. Equipped with everything you need to undertake, and in the center of Jerez.">
-              Un espacio innovador, abierto y multidisciplinar para albergar
-              actividades culturales, reuniones de empresas, talleres de
-              formación, presentaciones de productos, exposiciones o
-              conferencias. Equipado con todo lo que necesitas para emprender, y
-              en el centro de Jerez.
+              Un espacio abierto y multidisciplinar para albergar actividades
+              culturales, reuniones de empresas, talleres de formación,
+              presentaciones de productos, exposiciones o conferencias.
             </p>
             <p
               class="mb-4"
               data-en="Come on, we can't wait for you to join our community!">
-              ¡Venga, que estamos deseando que te unas a nuestra comunidad!
+              Equipado con todo lo que necesitas para emprender &mdash; en el
+              centro de Jerez.
             </p>
             <a
               href="https://coworkingjerez.com/"
@@ -323,11 +321,11 @@
       </section>
       <section id="team" class="py-8">
         <div class="py-8 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-          <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
+          <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16 px-4">
             <h2
               class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
-              data-en="Our Team">
-              Nuestro equipo
+              data-en="Ambassadors">
+              Embajadores
             </h2>
             <p
               class="font-light text-gray-800 lg:mb-16 sm:text-xl dark:text-gray-400"
@@ -515,34 +513,34 @@
             </div>
             <div class="flex flex-col md:flex-row gap-4">
               <div class="w-full">
-              <label
-                for="name"
-                class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                data-en="Your name"
-                >Tu nombre</label
-              >
-              <input
-                type="text"
-                id="name"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
-                placeholder="Escribe tu nombre completo"
-                data-en="Write your full name"
-                required />
+                <label
+                  for="name"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                  data-en="Your name"
+                  >Tu nombre</label
+                >
+                <input
+                  type="text"
+                  id="name"
+                  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
+                  placeholder="Escribe tu nombre completo"
+                  data-en="Write your full name"
+                  required />
               </div>
               <div class="w-full">
-              <label
-                for="email"
-                class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-                data-en="Your email"
-                >Tu email</label
-              >
-              <input
-                type="email"
-                id="email"
-                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
-                placeholder="email@email.com"
-                pattern="[^@\s]+@[^@\s]+\.[^@\s]+"
-                required />
+                <label
+                  for="email"
+                  class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+                  data-en="Your email"
+                  >Tu email</label
+                >
+                <input
+                  type="email"
+                  id="email"
+                  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
+                  placeholder="email@email.com"
+                  pattern="[^@\s]+@[^@\s]+\.[^@\s]+"
+                  required />
               </div>
             </div>
             <div>
@@ -577,7 +575,7 @@
             </div>
             <button
               type="submit"
-              class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-primary-600 sm:w-fit hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+              class="py-3 px-5 text-sm font-medium text-center text-white rounded-lg bg-primary-600 w-full md:w-fit hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
               data-en="Send message">
               Enviar mensaje
             </button>
