--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 id="language"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                 <option value="ES">🇪🇸</option>
-                <option value="EN">🇺🇸</option>
+                <option value="EN">🇬🇧</option>
               </select>
               <a
                 href="#contact"
@@ -331,9 +331,8 @@
               class="font-light text-gray-800 lg:mb-16 sm:text-xl dark:text-gray-400"
               data-en="over 30 years of combined experience in building digital products and startups, delivering innovative, high-quality solutions that push the boundaries of technology and design.">
               Más de 30 años de experiencia combinada en la creación de
-              productos digitales y nuevas empresas, brindando soluciones
-              innovadoras y de alta calidad que superan los límites de la
-              tecnología y el diseño.
+              productos digitales y nuevas empresas &mdash; brindando soluciones
+              innovadoras y de alta calidad en tecnología y diseño.
             </p>
           </div>
           <div class="grid gap-8 mb-6 lg:mb-16 lg:grid-cols-2 items-center">
@@ -523,7 +522,7 @@
                   type="text"
                   id="name"
                   class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
-                  placeholder="Escribe tu nombre completo"
+                  placeholder="Nmbre completo"
                   data-en="Write your full name"
                   required />
               </div>
@@ -538,7 +537,7 @@
                   type="email"
                   id="email"
                   class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
-                  placeholder="email@email.com"
+                  placeholder="correo@email.com"
                   pattern="[^@\s]+@[^@\s]+\.[^@\s]+"
                   required />
               </div>
@@ -554,7 +553,7 @@
                 type="text"
                 id="subject"
                 class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light placeholder:italic"
-                placeholder="Permítenos saber en qué te podemos ayudar"
+                placeholder="Cuéntanos en qué te podemos ayudar"
                 data-en="Let us know how we can help you"
                 required />
             </div>
@@ -569,8 +568,8 @@
                 id="message"
                 rows="6"
                 class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 placeholder:italic"
-                placeholder="Deja un comentario..."
-                data-en="Leave a comment..."
+                placeholder="Escribe aquí tu mensaje"
+                data-en="Write your message here"
                 required></textarea>
             </div>
             <button
@@ -645,6 +644,9 @@
           </a>
           <p class="my-6 text-gray-800 dark:text-gray-400">
             StartupJerez · Comunidad de emprendedores en Jerez de la Frontera
+          </p>
+          <p class="mt-6 mb-2 text-gray-800 dark:text-gray-400 font-bold">
+            Startups incubadas
           </p>
           <ul
             class="flex flex-wrap justify-center items-center mb-6 text-gray-900 dark:text-white">
